--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "csv-parse": "^5.6.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "joi": "^17.13.3",
