--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dev": "nodemon src/app.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "csv-parse": "^5.6.0",
     "nodemon": "^3.1.9",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "joi": "^17.13.3",
